donate.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lnd-invoice-proxy
  namespace: blog
spec:
  template:
    metadata:
      labels:
        app: lnd-invoice-proxy
    spec:
      containers:
      - image: docker.pkg.github.com/hugomd/lnd-invoice-proxy/lnd-invoice-proxy:latest
        name: lnd-invoice-proxy
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: github-registry
---
apiVersion: v1
kind: Service
metadata:
  name: lnd-invoice-proxy
  namespace: blog
spec:
  selector:
    app: lnd-invoice-proxy
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
