deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  template:
    metadata:
      labels:
        app: blog
    spec:
      imagePullSecrets:
        - name: gitlab-registry-hugo
      containers:
      - image: reg.g.hu.md/hugo/blog:<VERSION>
        name: blog
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
spec:
  selector:
    app: blog
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 1238
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: hugo.md
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: 1238
  tls:
    - secretName: blog-tls-prod-cert
      hosts:
        - hugo.md
