route.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rtl
  namespace: rtl
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: donate.hugo.md
    http:
      paths:
      - path: /
        backend:
          serviceName: lightning-node
          servicePort: 80
  tls:
    - secretName: sosto-wildcard-tls-prod-cert
      hosts:
        - rtl.sost.ovh
